test/resources/parser/failing/DoubleVal.scala
object V {
    val a: Int = val b: Int = 0;
    0
}